--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -9,11 +9,13 @@ services:
     volumes:
       -  mongo_data:/data/db 
 
+
   basketdb:
     container_name: basketdb
     restart: always
     ports:
       -  "6379:6379"
+
 
   discountdb:
     container_name: discountdb
@@ -27,6 +29,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/ 
 
+
   pgadmin:
     container_name: pgadmin
     environment:
@@ -38,6 +41,7 @@ services:
     volumes:
       - pgadmin_data:/root/.pgadmin 
  
+
   portainer:
     container_name: portainer
     restart: always
@@ -48,6 +52,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
 
+
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -57,13 +62,37 @@ services:
     ports:
       - "8000:80"
 
+
   basket.api:
     container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
       - "8001:80"
+
+
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      -  discountdb
+    ports:
+      - "8002:80"
+
+
+  discount.grpc:
+    container_name: discount.grpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      -  discountdb
+    ports:
+      - "8003:80"
 
