--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -39,7 +39,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
   rabbitmq:
-    container_name: pgadmin
+    container_name: rabbitmq
     restart: always
     ports:
         - "5672:5672"
