--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -23,20 +23,18 @@ services:
       - POSTGRES_DB=DiscountDb
     restart: always
     ports:
-      - "5432:5432"
+        - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
   orderdb:
     container_name: orderdb
     environment:
-      SA_PASSWORD: "SwN12345678"
-      ACCEPT_EULA: "Y"
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
     restart: always
     ports:
-      - "1433:1433"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+        - "1433:1433"
 
   rabbitmq:
     container_name: rabbitmq
@@ -52,26 +50,27 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=admin1234
     restart: always
     ports:
-      - "5050:80"
+        - "5050:80"
     volumes:
-      - pgadmin_data:/root/.pgadmin 
- 
+      - pgadmin_data:/root/.pgadmin
+
   portainer:
     container_name: portainer
     restart: always
     ports:
-      -  "8080:8000"
-      -  "9000:9000"
+      - "8080:8000"
+      - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
 
   catalog.api:
+    container_name: catalog.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
     depends_on:
-      -  catalogdb
+      - catalogdb
     ports:
       - "8000:80"
 
@@ -81,8 +80,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
       - "GrpcSettings:DiscountUrl=http://discount.grpc"
+      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
     depends_on:
       - basketdb
+      - rabbitmq
     ports:
       - "8001:80"
 
@@ -92,7 +93,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
     depends_on:
-      -  discountdb
+      - discountdb
     ports:
       - "8002:80"
 
@@ -102,7 +103,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
     depends_on:
-      -  discountdb
+      - discountdb
     ports:
       - "8003:80"
 
@@ -110,9 +111,10 @@ services:
     container_name: ordering.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionString:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"  
+      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
     depends_on:
-      -  orderdb
+        - orderdb
+        - rabbitmq
     ports:
-      - "8004:80"
-
+        - "8004:80"
